# PP1---GRUPO-6--2025---Big-Tools

./: Dataset_final.csv  Dataset_final.xlsx  Fixplanes-historial.csv  Historial_De_Servicio_registro_mantenimiento_V1.csv  Historial_Servicio_V1.xlsx  Horas_Uso.csv  PRUEBA CSV HORAS USO.csv  Planes_Catalogo.csv  Planes_Catalogo_20_10.csv  README.md  TABLERO VERSION FINAL.pbix  TABLERO VERSION casi final.pbix  TABLERO-VERSION-FINAL.pbix  fallas-detectadas_20_10.csv  fallas_detectadas.csv  fallas_detectadas_20_10.csv  historial_servicio_20_10.csv  historial_servicio_ETL-V1.csv  historial_servicio_ETL_V2_20_10.csv  historial_servicios.csv  horas_uso.csv  inventario.csv  inventario_20_10.csv  planes_asignados.csv  planes_asignados_ETL.csv  planes_asignados_ETL_v1.csv  planes_asignados_ETL_v2_20_10.csv  planes_catalogo.csv  tablero-v1 - 01-11-Ariel.pbix  tablero-v1 - 31-10.pbix  tablero-v1.pbix
repo_bigtools_g6/: Makefile  README.md  pyproject.toml
repo_bigtools_g6/sprint1/: __init__.py  cookie.txt  dataset.py  features.py  plots.py
repo_bigtools_g6/sprint1/modeling/: predict.py  train.py
