[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sprint1"
version = "0.0.1"
description = "Modulo para el proyecto de PP1 - BIGTOOLS - Grupo6"
authors = [
  { name = "grupo6" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.6"


[tool.ruff]
line-length = 99
src = ["sprint1"]
include = ["pyproject.toml", "sprint1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sprint1"]
force-sort-within-sections = true

